# Data_curation

./: .gitignore  CITATION.cff  Example.ipynb  Example_curation.ipynb  README.md  envfl.yml  environment.yml  idata.py  odata.py  pyproject.toml  requirements.txt  requirements_flame.txt  sample_smiles.xlsx  setup.py  smiles_curated.xlsx  smiles_cure.py  test_installation.py
API/: api_functions.py
curate/: Dataset_selection.py  canonicalization.py  config.yaml  context.py  conveyor.py  curate_src.py  curation.py  dataset_curation.py  dataset_selection.py  idata.py  learn.py  manage.py  parameters.py  smiles_cure.py
curate/chem/: chembl_extraction.py  chemical_description.py  chemical_similarity.py  chemical_utils.py  process_smiles.py  structure_curation.py
curate/children/: curation_parameters.yaml  idata_child.py  learn_child.py  odata_child.py
curate/curation/new2/: Non_processed_molecules.xlsx  Problematic_structures_removed.xlsx  curated_data.xlsx  curated_data_head.pkl  curation_parameters.yaml  input_data.sdf  statistics.pkl
curate/data_handler/: dataset_imbalance_correction.py  dataset_selection.py
curate/htt/: htt_curation.py
curate/metacuration/: metacuration.py
curate/util/: __init__.py  config.py  logger.py  utils.py
